--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </div>
   </template>
 
-  <script src="js/main.js" defer></script>
+  <script src="js/main.js" type="module" defer></script>
 
 </body>
 </html>
